# Jarvis

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  NEXT_GOAL.md  README.md  build.rs  kimodo-motion-service.py
JarvisIOS/: Info.override.plist  Package.swift  README.md  xtool.yml
JarvisIOS/Sources/BridgeFFI/: dummy.c
JarvisIOS/Sources/BridgeFFI/include/: bridging-header.h  jarvis_ios.h  jarvis_ios_extras.h
JarvisIOS/Sources/JarvisIOS/: ActEmotionMapEditorView.swift  AvatarFirstRunGreeting.swift  ContentView.swift  DebugLogsView.swift  GatewayChatView.swift  HubProfileSync.swift  IosChatFormatting.swift  IronclawConnectivity.swift  IronclawHubWebSocket.swift  JarvisAudioSession.swift  JarvisBevyView.swift  JarvisCameraPreview.swift  JarvisIOSApp.swift  JarvisIOSLog.swift  JarvisMicLevelMonitor.swift  KokoroSpeechClient.swift  MainShellView.swift  SavedAnimationsPlayView.swift  SwiftBridgeCore.swift  jarvis_ios.swift
JarvisIOS/rust/: Cargo.toml  build.rs
JarvisIOS/rust/src/: debug_log.rs  ios_anim_json.rs  ios_bevy.rs  ios_egui_ui.rs  ios_graphics.rs  ios_mtoon_overrides.rs  ios_profile_manifest.rs  ios_spring_preset.rs  jarvis_egui_theme.rs  lib.rs
JarvisIOS/scripts/: build-rust.sh  codesign  xcrun
assets/: LAYER_AUTHORING_GUIDE.md  POSE_GUIDE.md
assets/models/: README.txt
config/: default.toml
docs/: INTEGRATIONS.md  architecture.mermaid
scripts/: compress_vrm_textures.py  vrma_to_jarvis_animation_json.py
src/: arkit.rs  config.rs  egui_theme.rs  emotions.rs  kokoro_http.rs  lib.rs  main.rs  model_catalog.rs  paths.rs  pose_library.rs
src/a2f/: mod.rs  pb.rs
src/act/: mod.rs  parser.rs  types.rs
src/home_assistant/: mod.rs
src/ironclaw/: auth.rs  chat_media.rs  client.rs  mod.rs  protocol.rs  types.rs
src/kimodo/: mod.rs
src/mcp/: anim_layer_mcp.rs  mod.rs  plugin.rs  pose_authoring.rs
src/plugins/: anim_layer_sets.rs  anim_layers.rs  avatar.rs  channel_server.rs  chat_pipeline_status.rs  debug_ui.rs  emotion_map.rs  environment.rs  expressions.rs  graphics_advanced.rs  ha_vision_gaze.rs  home_assistant.rs  home_assistant_events.rs  home_assistant_routing.rs  hub_pose_apply.rs  idle_tick.rs  ironclaw_chat.rs  jarvis_ios_hub.rs  light_rig.rs  look_at.rs  mod.rs  mtoon_overrides.rs  native_anim_player.rs  orbit_camera.rs  pose_capture.rs  pose_driver.rs  pose_library_assets.rs  rig_editor.rs  service_status.rs  shared_runtime.rs  spring_bone.rs  spring_preset.rs  traffic_log.rs  tts.rs  vrm_eye_debug.rs
src/plugins/debug_ui/: anim_layers.rs  apply.rs  chat.rs  emotion_mappings.rs  graphics_advanced.rs  home_assistant.rs  network_trace.rs  pose_controller.rs  rig_editor.rs  sections.rs  services.rs  widgets.rs
tests/: a2f_emotion_yaml.rs  a2f_kokoro_pipeline.rs  chat_media_strip.rs
tests/fixtures/: a2f_emotions_smoke.yaml
