[package]
name = "jarvis-avatar"
version = "0.1.0"
edition = "2024"
description = "Bevy VRM viewer with IronClaw hub, gateway chat, and MCP pose tools"
readme = "README.md"

[[bin]]
name = "jarvis-avatar"
path = "src/main.rs"

[dependencies]
# Rendering (Bevy 0.18 + bevy_vrm1 0.7 — see README vs NewPlan.md pin)
bevy = { version = "0.18", features = ["wav"] }
bevy_vrm1 = "0.7"
bevy_egui = { version = "0.39", features = ["serde"] }
bevy_panorbit_camera = { version = "0.34", features = ["bevy_egui"] }
# Markdown rendering in the chat window. Version pin: 0.22 targets egui ^0.33,
# which is what bevy_egui 0.39 re-exports (confirmed via Cargo.lock).
egui_commonmark = { version = "0.22", default-features = false, features = ["pulldown_cmark"] }
# Matches bevy_egui 0.39 / egui 0.33 (see Cargo.lock).
egui_json_tree = "0.14.2"
# Native file open dialog for the chat "📎 Attach" button.
rfd = "0.17.2"

# Channel-server hub (axum WS + HTTP) / async
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
crossbeam-channel = "0.5"
futures = "0.3"
rand = "0.10"

# HTTP (TTS + IronClaw gateway) + SSE
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
reqwest-eventsource = "0.6"
base64 = "0.22"

# Decode assistant inline images in the gateway chat window (PNG/JPEG/WebP).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# WAV sanity-check before handing Kokoro payloads to bevy_audio — bevy_audio
# 0.18 `.unwrap()`s rodio's decode, so we pre-validate or the whole app panics
# when Kokoro returns a malformed / truncated payload (e.g. error body).
hound = "3.5"

# RMCP server (exposes pose / A2F / Kimodo tools to IronClaw)
rmcp = { version = "1", features = [
    "server",
    "macros",
    "schemars",
    "transport-streamable-http-server",
    "reqwest",
] }
schemars = "1.2.1"
tonic = { version = "0.14.5", default-features = false, features = ["codegen", "transport"] }
tonic-prost = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

# ACT parsing
regex = "1"
once_cell = "1"
thiserror = "2"
parking_lot = "0.12"

# Config
config = "0.15"
dotenvy = "0.15"
toml = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
# Wraps `prost-build` + `tonic-build` so generated clients use `tonic_prost::ProstCodec`.
tonic-prost-build = "0.14.5"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Vendored fork: `VrmcMaterialRegistry` maps VRMC_materials_mtoon by material
# index so unnamed glTF materials still promote to MToon (see vendor patch).
[patch.crates-io]
bevy_vrm1 = { path = "vendor/bevy_vrm1" }
