[package]
name = "jarvis_ios"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
swift-bridge = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
bevy = { version = "0.18", default-features = true, features = ["wav"] }
raw-window-handle = "0.6"
