[package]
name = "jarvis_ios"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
swift-bridge = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
# Match Bevy's `3d` profile but replace the `ui` meta-feature with `ui_bevy_render` so `audio`
# (→ `bevy_audio` → `coreaudio-sys`) is never enabled — Apple audio headers are unavailable when
# cross-compiling Linux → `aarch64-apple-ios` without a full SDK toolchain.
# Direct dependency so `#[derive(Component)]` / `#[derive(Resource)]` proc-macros resolve `bevy_ecs`
# when using `bevy` with `default-features = false` (BevyManifest / rustc extern prelude).
bevy_ecs = { version = "0.18", default-features = false, features = ["std", "bevy_reflect", "async_executor"] }
# Do **not** use `default_platform`: it pulls `bevy_gilrs`, `sysinfo_plugin`, `webgl2`, `x11`, `wayland`,
# etc. Embedded JarvisIOS only needs `WinitPlugin` as a **type** to `.disable::<WinitPlugin>()` — not
# gilrs threads (seen in crash reports next to the main-thread DisplayLink abort).
# Omit `multi_threaded`: it enables `PipelinedRenderingPlugin`, which drives the render world on
# background threads — unsafe with Metal + a UIKit `UIView` surface (main-thread DisplayLink).
bevy = { version = "0.18", default-features = false, features = [
  "default_app",
  "std",
  "default_font",
  "bevy_winit",
  "3d_bevy_render",
  "ui_bevy_render",
  "scene",
  "picking",
  "debug"
] }
raw-window-handle = "0.6"
# Avoid blake3's NEON C build (cc-rs → xcrun) when cross-compiling from Linux.
blake3 = { version = "1.8", default-features = false, features = ["std", "pure"] }
bevy_vrm1 = "0.7"
# `bevy_egui` enables PanOrbit’s `check_egui_wants_focus` so touches over egui don’t steal the orbit camera.
bevy_egui = { version = "0.39.1", features = ["serde"] }
bevy_panorbit_camera = { version = "0.34", default-features = false, features = ["bevy_egui"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "ansi"] }

# `tracing-oslog` runs a C build that expects Apple `xcrun`; use a stub when building on Linux.
[patch.crates-io]
tracing-oslog = { path = "vendor/tracing-oslog-stub" }
